<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/header_main"
        android:fontFamily="@font/montserrat_extrabold"
        android:textSize="35sp"
        android:text="@string/header_main" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/util1"
        android:layout_width="match_parent"
        app:cornerRadius="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:textSize="20sp"
        android:text="@string/util1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/util2"
        android:layout_width="match_parent"
        app:cornerRadius="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:textSize="20sp"
        android:text="@string/util2" />
</LinearLayout>